--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   </head>
   <body>
-    <div class="container-fluid" style="border-radius: 0;">
+    <div class="container-fluid">
   		<div class="row">
 
   			<nav role="navigation" class="navbar navbar-inverse">
