--- a/index.html
+++ b/index.html
@@ -1,65 +1,275 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
 
-    <!-- Bootstrap -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Bootstrap 101 Template</title>
 
-    <!-- My style -->
-    <link href="assets/css/style.css" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
-  </head>
-  <body>
-    <div class="container-fluid">
-  		<div class="row">
+  <!-- My style -->
+  <link href="assets/css/style.css" rel="stylesheet">
 
-  			<nav role="navigation" class="navbar navbar-inverse">
-  				<div class="container">
+</head>
 
-  					<div class="navbar-header header">
-              <div class="container">
-                <div class="row">
-                  <div class="col-lg-12">
-                    <h1><a href="#">КиноМонстр</a></h1>
-                    <p>Кино - наша страсть!</p>
-                  </div>
+<body>
+  <div class="container-fluid">
+    <div class="row">
+
+      <nav role="navigation" class="navbar navbar-inverse">
+        <div class="container">
+
+          <div class="navbar-header header">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-12">
+                  <h1><a href="#">КиноМонстр</a></h1>
+                  <p>Кино - наша страсть!</p>
                 </div>
               </div>
+            </div>
 
-              <!-- У кнопки прописывается data-target="#navbarCollapse" для контенера id="navbarCollapse" чтобы при нажатии на кнопку меню раскрывалось -->
-              <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-        						<span class="sr-only">Toggle navigation</span>
-        						<span class="icon-bar"></span>
-        						<span class="icon-bar"></span>
-        						<span class="icon-bar"></span>
-  						</button>
+            <!-- У кнопки прописывается data-target="#navbarCollapse" для контенера id="navbarCollapse" чтобы при нажатии на кнопку меню раскрывалось -->
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
 
-  					</div>
+          </div>
 
-  					<div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
-  						<ul class="nav nav-pills">
-  							<li class="active"> <a href="#">Главная</a> </li>
-  							<li> <a href="#">Фильмы</a> </li>
-  							<li> <a href="#">Сериалы</a> </li>
-  							<li> <a href="#">Рейтинг фильмов</a> </li>
-  							<li> <a href="#">Контакты</a> </li>
-  						</ul>
-  					</div>
+          <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
+            <ul class="nav nav-pills">
+              <li class="active"> <a href="#">Главная</a> </li>
+              <li> <a href="#">Фильмы</a> </li>
+              <li> <a href="#">Сериалы</a> </li>
+              <li> <a href="#">Рейтинг фильмов</a> </li>
+              <li> <a href="#">Контакты</a> </li>
+            </ul>
+          </div>
 
-  				</div>
-  			</nav>
+        </div>
+      </nav>
 
-  		</div>
-  	</div>
+    </div>
+  </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+  <div class="wrapper">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-sm-push-3">
+
+          <form role="search" class="visible-xs">
+            <div class="form-group">
+              <div class="input-group">
+                <input type="search" class="form-control input-lg" placeholder="Ваш запрос">
+                <div class="input-group-btn">
+                  <button class="btn btn-default btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                </div>
+              </div>
+            </div>
+          </form>
+
+          <h2>Новые фильмы</h2>
+          <hr>
+          <div class="row">
+
+            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
+              <img src="img/inter.png" alt="интерстеллар">
+              <div class="film_label">Интерстеллар</div>
+            </div>
+
+            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
+              <img src="img/matrix.png" alt="матрица">
+              <div class="film_label">Матрица</div>
+            </div>
+
+            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
+              <img src="img/cloud.png" alt="облачный атлас">
+              <div class="film_label">Облачный атлас</div>
+            </div>
+
+            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
+              <img src="img/max.png" alt="безумный макс">
+              <div class="film_label">Безумный макс</div>
+            </div>
+
+          </div>
+
+          <div class="margin-8"></div>
+
+          <h2>Новые сериалы</h2>
+          <hr>
+          <div class="row">
+
+            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
+              <img src="img/xfiles.png" alt="Секретные материалы">
+              <div class="film_label">Секретные материалы</div>
+            </div>
+
+            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
+              <img src="img/silicon.png" alt="Кремневая долина">
+              <div class="film_label">Кремневая долина</div>
+            </div>
+
+            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
+              <img src="img/dead.png" alt="Ходячие мертвецы">
+              <div class="film_label">Ходячие мертвецы</div>
+            </div>
+
+            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
+              <img src="img/breakingbad.png" alt="Во все тяжкие">
+              <div class="film_label">Во все тяжкие</div>
+            </div>
+
+          </div>
+
+          <div class="margin-8"></div>
+
+          <a href="#"><h3>Как снимали Интерстеллар</h3></a>
+          <hr>
+          <p>
+            45 лет исполнилось Кристоферу Нолану — одному из самых успешных режиссеров нашего времени, чьи работы одинаково любимы как взыскательными критиками, так и простыми зрителями. Фильмом изначально занималась студия Paramount. Когда Кристофер Нолан занял место режиссера, студия Warner Bros., которая выпускала его последние фильмы, добилась участия в проекте.
+          </p>
+          <a href="#" class="btn btn-warning pull-right">читать</a>
+
+          <div class="margin-8 clear"></div>
+
+          <a href="#"><h3>Актер Том Хенкс поделился впечатлением о фестивале</h3></a>
+          <hr>
+          <p>
+            16 февраля в Лондоне состоялась 67-я церемония вручения наград Британской киноакадемии. Леонардо ДиКаприо, Брэд Питт, Анджелина Джоли, Кейт Бланшетт, Хелен Миррен, Эми Адамс, Кристиан Бэйл, Альфонсо Куарон и другие гости и победители премии — в нашем репортаже.
+          </p>
+          <a href="#" class="btn btn-warning pull-right">читать</a>
+
+          <div class="margin-8 clear"></div>
+
+        </div>
+
+        <div class="col-sm-3 col-sm-pull-9">
+
+          <div class="panel panel-info hidden-xs">
+            <div class="panel-heading">
+              <div class="sidebar-header">Поиск</div>
+            </div>
+            <div class="panel-body">
+              <form role="search">
+                <div class="form-group">
+                  <div class="input-group">
+                    <input type="search" class="form-control input-lg" placeholder="Ваш запрос">
+                    <div class="input-group-btn">
+                      <button class="btn btn-default btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <div class="sidebar-header">Вход</div>
+            </div>
+            <div class="panel-body">
+
+              <form role="form">
+                <div class="form-group">
+                  <input type="text" class="form-control input-lg" placeholder="Логин">
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control input-lg" placeholder="Пароль">
+                </div>
+
+                <button type="submit" class="btn btn-warning pull-right">вход</button>
+              </form>
+
+            </div>
+          </div>
+
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <div class="sidebar-header">Новости</div>
+            </div>
+            <div class="panel-body">
+
+              <p>31.02.2017</p>
+              <p>Мы запустили новый сервис</p>
+
+            </div>
+          </div>
+
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <div class="sidebar-header">Рейтинг фильмов</div>
+            </div>
+            <div class="panel-body">
+
+              <ul class="list-group">
+                <li class="list-group-item list-group-warning">
+                  <span class="badge">8.9</span>
+                  <a href="#">Интерстеллар</a>
+                </li>
+
+                <li class="list-group-item list-group-warning">
+                  <span class="badge">8.7</span>
+                  <a href="#">Безумный макс</a>
+                </li>
+
+                <li class="list-group-item list-group-warning">
+                  <span class="badge">8.3</span>
+                  <a href="#">Матрица</a>
+                </li>
+
+                <li class="list-group-item list-group-warning">
+                  <span class="badge">8.1</span>
+                  <a href="#">Облачный атлас</a>
+                </li>
+
+                <li class="list-group-item list-group-warning">
+                  <span class="badge">8.9</span>
+                  <a href="#">Интерстеллар</a>
+                </li>
+
+                <li class="list-group-item list-group-warning">
+                  <span class="badge">8.7</span>
+                  <a href="#">Безумный макс</a>
+                </li>
+
+                <li class="list-group-item list-group-warning">
+                  <span class="badge">8.3</span>
+                  <a href="#">Матрица</a>
+                </li>
+
+                <li class="list-group-item list-group-warning">
+                  <span class="badge">8.1</span>
+                  <a href="#">Облачный атлас</a>
+                </li>
+              </ul>
+
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="clear"></div>
+  </div>
+
+  <footer>
+    <div class="container">
+      <p class="text-center"> <a href="https://fructcode.com">FRUCTCODE.COM</a> </p>
+    </div>
+  </footer>
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="assets/js/bootstrap.min.js"></script>
+</body>
+
 </html>
