--- a/show.html
+++ b/show.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>КиноМонстр</title>
+  <title>Фильмы</title>
 
   <!-- Bootstrap -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -45,8 +45,8 @@
 
           <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
             <ul class="nav nav-pills">
-              <li class="active"><a href="index.html">Главная</a></li>
-              <li><a href="films.html">Фильмы</a></li>
+              <li><a href="index.html">Главная</a></li>
+              <li class="active"><a href="films.html">Фильмы</a></li>
               <li><a href="series.html">Сериалы</a></li>
               <li><a href="rating.html">Рейтинг фильмов</a></li>
               <li><a href="contact.html">Контакты</a></li>
@@ -62,6 +62,7 @@
   <div class="wrapper">
     <div class="container">
       <div class="row">
+
         <div class="col-sm-9 col-sm-push-3">
 
           <form role="search" class="visible-xs">
@@ -75,77 +76,53 @@
             </div>
           </form>
 
-          <h2>Новые фильмы</h2>
+          <h1>Интерстеллар</h1>
           <hr>
-          <div class="row">
 
-            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-              <img src="img/inter.png" alt="интерстеллар">
-              <div class="film_label">Интерстеллар</div>
-            </div>
-
-            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-              <img src="img/matrix.png" alt="матрица">
-              <div class="film_label">Матрица</div>
-            </div>
-
-            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-              <img src="img/cloud.png" alt="облачный атлас">
-              <div class="film_label">Облачный атлас</div>
-            </div>
-
-            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-              <img src="img/max.png" alt="безумный макс">
-              <div class="film_label">Безумный макс</div>
-            </div>
-
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/R5KHoE_8dgo?showinfo=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="well info-block text-center">
+            Год: <span class="badge">2014</span> Рейтинг: <span class="badge">8.9</span> Режиссер: <span class="badge">Кристофер Нолан</span>
           </div>
 
           <div class="margin-8"></div>
 
-          <h2>Новые сериалы</h2>
+          <h2>Описание Интерстеллар</h2>
           <hr>
-          <div class="row">
 
-            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-              <img src="img/xfiles.png" alt="Секретные материалы">
-              <div class="film_label">Секретные материалы</div>
-            </div>
-
-            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-              <img src="img/silicon.png" alt="Кремневая долина">
-              <div class="film_label">Кремневая долина</div>
-            </div>
-
-            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-              <img src="img/dead.png" alt="Ходячие мертвецы">
-              <div class="film_label">Ходячие мертвецы</div>
-            </div>
-
-            <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-              <img src="img/breakingbad.png" alt="Во все тяжкие">
-              <div class="film_label">Во все тяжкие</div>
-            </div>
-
+          <div class="well">
+            Когда засуха приводит человечество к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие, чтобы превзойти прежние ограничения для космических путешествий человека и переселить человечество на другую планету.
           </div>
 
           <div class="margin-8"></div>
 
-          <a href="show.html"><h3>Как снимали Интерстеллар</h3></a>
+          <h2>Отзывы об Интерстеллар</h2>
           <hr>
-          <p>
-            45 лет исполнилось Кристоферу Нолану — одному из самых успешных режиссеров нашего времени, чьи работы одинаково любимы как взыскательными критиками, так и простыми зрителями. Фильмом изначально занималась студия Paramount. Когда Кристофер Нолан занял место режиссера, студия Warner Bros., которая выпускала его последние фильмы, добилась участия в проекте.
-          </p>
-          <a href="#" class="btn btn-warning pull-right">читать</a>
 
-          <div class="margin-8 clear"></div>
+          <div class="panel panel-info">
+            <div class="panel-heading"><i class="glyphicon glyphicon-user"></i> <span>Сергей</span> </div>
+            <div class="panel-body">
+              Отличный фильм, 3 часа пролетели не заметно.
+            </div>
+          </div>
 
-          <a href="#"><h3>Актер Том Хенкс поделился впечатлением о фестивале</h3></a>
-          <hr>
-          <p>
-            16 февраля в Лондоне состоялась 67-я церемония вручения наград Британской киноакадемии. Леонардо ДиКаприо, Брэд Питт, Анджелина Джоли, Кейт Бланшетт, Хелен Миррен, Эми Адамс, Кристиан Бэйл, Альфонсо Куарон и другие гости и победители премии — в нашем репортаже.
-          </p>
-          <a href="#" class="btn btn-warning pull-right">читать</a>
+          <div class="panel panel-info">
+            <div class="panel-heading"><i class="glyphicon glyphicon-user"></i> <span>Виталий</span> </div>
+            <div class="panel-body">
+              Хороший фильм.
+            </div>
+          </div>
+
+          <form>
+            <div class="form-group">
+              <input type="text" placeholder="ваше имя" class="form-control input-lg">
+            </div>
+            <div class="form-group">
+              <textarea class="form-control"></textarea>
+            </div>
+            <button class="btn btn-lg btn-warning pull-right">отправить</button>
+          </form>
 
           <div class="margin-8 clear"></div>
 
